--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-fileupload": "^1.4.0",
     "fs": "^0.0.1-security",
+    "node-fetch": "^3.2.6",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
